--- a/src/styles/animation.scss
+++ b/src/styles/animation.scss
@@ -21,3 +21,32 @@
     transform: translateY(0);
   }
 }
+
+.fade-out {
+  opacity: 1;
+  transform: translateY(0);
+  -webkit-animation-name: fadeout;
+  animation-name: fadeout;
+  animation-duration: 0.4s;
+  -webkit-animation-duration: 0.4s;
+  animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
+}
+
+_:-ms-fullscreen, :root .fade-out {
+  opacity: 1!important;
+}
+
+@keyframes fadeout {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+    height: 134px;
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-75px);
+    height: 0px;
+    padding: 0;
+  }
+}
